--- a/style.css
+++ b/style.css
@@ -155,21 +155,23 @@ nav ul li a:hover::after {
 
 .tab-titles {
     display: flex;
-    flex-wrap: wrap; /* Allow wrapping of tabs */
-    margin: 20px 0; /* Adjusted for better spacing */
+    flex-wrap: wrap; 
+    margin: 20px 0; 
+    justify-content: center;
+    gap:50px
 }
 
 .tab-divider {
-    display: none; /* Hide by default */
-    border: none; /* Remove default border */
-    height: 2.5px; /* Set height of the divider */
-    background-color: #ea4d4d; /* Set color of the divider */
-    margin: 1px 0; /* Set margin for spacing */
+    display: none; 
+    border: none; 
+    height: 2.5px; 
+    background-color: #e76851;
+    margin: 1px 0; 
 }
 
 .tab-links {
-    margin-right: 20px; /* Adjusted margin for larger screens */
-    font-size: 22px;    /* Default font size */
+    margin-right: 20px;
+    font-size: 22px;   
     font-weight: 500;
     cursor: pointer;
     position: relative;
@@ -180,28 +182,28 @@ nav ul li a:hover::after {
 
 @media (max-width: 768px) {
     .tab-divider {
-        display: block; /* Show the divider on small screens */
+        display: block; 
     }
 
     .tab-links {
-        margin-right: 10px; /* Reduce margin for smaller screens */
-        font-size: 18px;    /* Smaller font size */
+        margin-right: 10px; 
+        font-size: 18px;   
     }
 }
 
 @media (max-width: 480px) {
     .tab-divider {
-        display: block; /* Show the divider on small screens */
+        display: block; 
     }
-
+    
     .tab-titles {
-        flex-direction: column; /* Stack the tabs vertically */
-        align-items: flex-start; /* Align items to the start */
+        flex-direction: column;
+        align-items: flex-start; 
     }
 
     .tab-links {
-        margin: 5px 0; /* Add vertical margin for spacing */
-        font-size: 16px; /* Further decrease font size */
+        margin: 5px 0; 
+        font-size: 16px;
     }
 }
 
@@ -350,11 +352,11 @@ nav ul li a:hover::after {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    gap: 20px; /* Space between each section */
+    gap: 20px; 
 }
 
 .hobby {
-    flex-basis: 30%; /* Each hobby takes up 30% of the container width */
+    flex-basis: 30%; 
     background-color: rgba(255, 255, 255, 0.15);
     padding: 15px;
     border-radius: 10px;
@@ -374,18 +376,18 @@ nav ul li a:hover::after {
 }
 
 .hobby video {
-    width: 100%; /* Ensures the video spans the full width of the box */
-    height: 95%; /* Set a specific height for all videos */
-    border-radius: 8px; /* Optional: Adds rounding to the video edges */
+    width: 100%; 
+    height: 95%; 
+    border-radius: 8px; 
 }
 
 
 .video-fill {
-    object-fit:none; /* Ensures the video fills the entire area, possibly cropping */
+    object-fit:none;
 }
 
 .video-cover {
-    object-fit: cover; /* Ensures the video covers the entire area without distortion */
+    object-fit: cover; 
 }
 
 
@@ -487,20 +489,17 @@ audio {
 
 /* Google Maps */
 #iframe-container {
-    margin-top: 40px; /* Space above the map */
-    overflow: hidden; /* Ensures iframe is contained */
-    position: relative; /* For responsive iframe */
-    padding-top: 56.25%; /* Default aspect ratio for larger screens */
-    /* display: flex;          /* Use flexbox to center content 
-    justify-content: center; /* Center horizontally 
-    margin: 20px 0;        Add margin for spacing */
+    margin-top: 40px; 
+    overflow: hidden;
+    position: relative; 
+    padding-top: 56.25%; 
 }
 
 #contact iframe {
-    width: 100%;           /* Make the iframe responsive */
-    max-width: 1000px;    /* Set a maximum width */
-    height: 400px;        /* Set a fixed height */
-    border: 0;            /* Remove border */
+    width: 100%;         
+    max-width: 1000px;  
+    height: 400px;       
+    border: 0;            
 }
 
 
@@ -525,12 +524,11 @@ nav .fa-solid{
     }
     .header-text {
         position: absolute;
-        top: 50%; /* Centers vertically */
-        right: 25px; /* Keeps it 50px away from the right */
-        transform: translateY(-50%); /* Adjusts for the text's height */
+        top: 50%; 
+        right: 25px;
+        transform: translateY(-50%); 
         font-size: 35px;
-        /* margin-left: 5%;
-        font-size: 30px; */
+       
     }
 
     #greeting{
@@ -547,20 +545,19 @@ nav .fa-solid{
         font-size: 25px;
     }
     .row {
-        /* display: flex; */
+       
         justify-content: space-between;
-        flex-wrap: wrap; /* Allow wrapping on smaller screens */
+        flex-wrap: wrap;
         height: 100%;
     }
     
     .about-col-1 img{
         width: 380px;
         height: 400px;
-       /* flex-basis: auto;
-       padding: 0; */
+   
     }
     .about-col-2 {
-        flex-basis: 100%; /* Stack columns on smaller screens */
+        flex-basis: 100%; 
         padding: 10px;
     }
     .about-col-2 .subtitle{
@@ -570,19 +567,24 @@ nav .fa-solid{
         font-size: 15px;
     
     }
+
+    .tab-titles{
+        text-align: center;
+        gap: 5px
+    }
     .tab-titles .tab-links {
         display: flex;
-        flex-wrap: wrap; /* Allow wrapping of tabs */
-        font-size: 18px
+        flex-wrap: wrap; 
+        font-size: 18px;
     }
 
     .hobbies-grid {
-        flex-direction: column; /* Stack hobbies on smaller screens */
-        gap: 10px; /* Reduce gap for small screens */
+        flex-direction: column;
+        gap: 10px; 
     }
 
     .hobby {
-        flex-basis: 100%; /* Each hobby takes full width */
+        flex-basis: 100%; 
     }
     nav ul{
         background-color: #e76851;
@@ -598,7 +600,7 @@ nav .fa-solid{
     }
     nav ul li {
         display: block;
-        margin: 35px 50px; /* Adjust spacing for smaller screens */
+        margin: 35px 50px; 
     }
 
     nav ul .fa-solid{
@@ -689,11 +691,11 @@ nav .fa-solid{
     }
 
     .about-col-1 img {
-        width: 100%;  /* Make image take full width */
-        max-width: 250px; /* Restrict max width */
-        height: auto; /* Maintain aspect ratio */
+        width: 100%;  
+        max-width: 250px; 
+        height: auto; 
         display: block;
-        margin: 0 auto; /* Center the image */
+        margin: 0 auto; 
     }
 
     .about-col-2 {
@@ -701,12 +703,12 @@ nav .fa-solid{
     }
 
     .subtitle {
-        font-size: 24px; /* Adjust subtitle font size */
+        font-size: 24px; 
         margin-bottom: 10px;
     }
 
     .text {
-        font-size: 14px; /* Adjust text size */
+        font-size: 14px; 
         line-height: 1.5;
     }
 
@@ -714,8 +716,8 @@ nav .fa-solid{
         flex-direction: column;
         align-items: center;
         display: flex;
-        justify-content: center; /* Center tab links */
-        flex-wrap: wrap; /* Wrap tabs to next line if needed */
+        justify-content: center; 
+        flex-wrap: wrap; 
         margin-bottom: 20px;
     }
 
@@ -732,25 +734,22 @@ nav .fa-solid{
     padding: 8px 12px;
     margin: 5px;
     cursor: pointer;
-    /* background-color: rgba(219, 56, 56, 0.3); Change color and set opacity (80%) */
-    /* border-radius: 10px; Optional: add rounded corners */
-    /* Example for background size */
-    /* background-size: cover; If you use a background image */
+
     }
 
     .tab-contents ul {
-        padding-left: 0; /* Remove default padding */
-        list-style: none; /* Remove bullet points */
+        padding-left: 0; 
+        list-style: none;
         text-align: left;
     }
 
     .tab-contents ul li {
-        margin-bottom: 10px; /* Space between list items */
-        font-size: 14px; /* Adjust font size for list items */
+        margin-bottom: 10px; 
+        font-size: 14px;
     }
 
     .tab-contents ul li span {
-        font-weight: bold; /* Bold labels */
+        font-weight: bold; 
     }
   
     #contact {
@@ -774,4 +773,31 @@ nav .fa-solid{
     height: 5px;
 }
 
+
+/* iPad-specific adjustments */
+@media (min-width: 768px) and (max-width: 1024px) {
+    .tab-divider {
+        display: block; 
+    }
+
+    
+    .row {
+        justify-content: space-between;
+        flex-wrap: wrap; 
+        height:auto;
+        display: inline;
+        
+    }
+    .tab-titles {
+        gap: 50px;
+    }
+    .tab-titles .tab-links{
+        font-size: 25px;
+        
+    }
+
+    .music-player{
+        margin: auto;
+    }
+    }
 
