--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html{
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url(Background.jpg);
+    background-image: url(assets/Background.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -520,7 +520,7 @@ nav .fa-solid{
 @media (max-width: 768px) {
 
     #header{
-        background-image: url("phone\ background.jpg");
+        background-image: url("assets/phone\ background.jpg");
     }
     .header-text {
         position: absolute;
@@ -803,4 +803,3 @@ nav .fa-solid{
         margin: auto;
     }
     }
-
